Prevent unloaded video sizing issues on MediaDocument

This CL removes a unneeded check in layout_video.cc which reduces the
intrinsic height of a video to 1px on MediaDocument.

Bug: 826059
Change-Id: I539f355d4b46de7efbe183195dc506b60e14e523
Reviewed-on: https://chromium-review.googlesource.com/1005508
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551909}
Former-commit-id: 77c104a5421840656d0e6c21f37f72dede922fc4